--- a/SpatialSurvivalOPSCR/references.bib
+++ b/SpatialSurvivalOPSCR/references.bib
@@ -1,6 +1,6 @@
  @Manual{nimbleSCR,
     title = {nimbleSCR: Spatial Capture-Recapture (SCR) Methods Using 'nimble'},
-    author = {Bischof, Richard and Turek, Daniel and Milleret, Cyril and Ergon, Torbjørn and  Dupont, Pierre and {de Valpine} Perry},
+    author = {Bischof, Richard and Turek, Daniel and Milleret, Cyril and Ergon, Torbjorn and  Dupont, Pierre and  Perry {de Valpine}},
     year = {2020},
     note = {R package version 0.1.0},
   }
@@ -41,7 +41,7 @@ year = {2019}
 
 @misc{Milleret2019Dryad,
   title = {Data from: A local evaluation of the individual state-space to scale up Bayesian spatial capture recapture},
-  author = {Milleret, C and Dupont, P and Bonenfant, C and Brøseth, H and Flagstad, Ø and Sutherland, C and Bischof, R},
+  author = {Milleret, C and Dupont, P and Bonenfant, C and Broseth, H and Flagstad, Ø and Sutherland, C and Bischof, R},
   year = {2018},
   journal = {Ecology and Evolution},
   URL = {https://doi.org/10.5061/dryad.42m96c8},
@@ -81,8 +81,6 @@ number = {2},
 pages = {e03385},
 keywords = {Markov chain Monte Carlo, Mark–recapture, nimble, sampling efficiency, spatial capture–recapture},
 doi = {https://doi.org/10.1002/ecs2.3385},
-url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecs2.3385},
-eprint = {https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1002/ecs2.3385},
 year = {2021}
 }
 
